FixOverflowBackground

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
 *,
 *::before,
 *::after {
+	box-sizing: border-box;
 }
 body {
 	margin: 0;
